# laura

./: .gitignore  Makefile.am  README.org  bootstrap  configure.ac  guile.am  guix.scm  pre-inst-env.in
.reuse/: dep5
guix/extensions/: laura.scm.in
laura/: config.scm.in  main.scm  utils.scm
share/guix/extensions/: laura.scm
tests/: examples.scm
